--- a/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
+++ b/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build and push backend
       uses: docker/build-push-action@v4
       with:
-        context: .
+        context: ./docker-ecommerce-backend
         file: ./docker-ecommerce-backend/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/ecommerce-backend:latest
