--- a/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
+++ b/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout repository with submodules
       uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
