--- a/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
+++ b/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Docker CI/CD
+name: Docker CI/CD - Ecommerce App
 
 on:
   push:
@@ -15,6 +15,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: 'recursive'
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Initialize and update submodules
+      run: |
+        git submodule update --init --recursive
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -40,11 +45,3 @@ jobs:
         file: ./docker-ecommerce-backend/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/ecommerce-backend:latest
-
-    # Add deployment steps here (e.g., SSH into server and run docker-compose up -d)
-    # - name: Deploy to production
-    #   if: github.ref == 'refs/heads/main'
-    #   run: |
-    #     ssh user@your-server "cd /path/to/app && docker-compose pull && docker-compose up -d"
-    #   env:
-    #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
