--- a/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
+++ b/Downloads/Practical5/ecommerce fullstack app/.github/workflows/docker-ci-cd.yml
@@ -17,12 +17,13 @@ jobs:
         submodules: 'recursive'
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Initialize and update submodules
+    - name: Debug - List directory contents
       run: |
-        git submodule update --init --recursive
         ls -la
-        ls -la docker-ecommerce-frontend/  # Debug: List frontend directory
-        ls -la docker-ecommerce-backend/   # Debug: List backend directory
+        echo "Frontend directory contents:"
+        ls -la docker-ecommerce-frontend/ || echo "Frontend directory not found"
+        echo "Backend directory contents:"
+        ls -la docker-ecommerce-backend/ || echo "Backend directory not found"
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -36,7 +37,7 @@ jobs:
     - name: Build and push frontend
       uses: docker/build-push-action@v4
       with:
-        context: .
+        context: ./docker-ecommerce-frontend
         file: ./docker-ecommerce-frontend/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/ecommerce-frontend:latest
